--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the electromotive force<br> 
+    What is the electromotive force?<br>
+    Electromotive force (EMF) is an energy transfer to an electric circuit per unit of electric charge. It is measured in volts.<br>
+    How to calculate electromotive force?<br>
+    To calculate electromotive force you should use the following formula:<br>
+    E = W / Q<br>
+    where:<br>
+    E = electromotive force<br>
+    W = work done<br>
+    Q = charge<br>
+    Why use electromotive force?<br>
+    The electromotive force (EMF) is used in order to convert energy from one form to another.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
